--- a/package.json
+++ b/package.json
@@ -17,5 +17,13 @@
     "JSONStream": "^1.3.4",
     "mongodb": "^3.1.4",
     "progress": "^2.0.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/hammady/fastmongoexport.git"
+  },
+  "bugs": {
+    "url": "https://github.com/hammady/fastmongoexport/issues"
+  },
+  "homepage": "https://github.com/hammady/fastmongoexport#readme"
 }
